src/objects/TR1__Application_History__c.object
<CustomObject>
    <description>Used for Stages tracking in new ATS design.</description>
    <fields>
        <fullName>TR1__Application__c</fullName>
        <label>Application</label>
        <referenceTo>TR1__Application_V2__c</referenceTo>
        <relationshipLabel>Applications History</relationshipLabel>
        <relationshipName>Applications_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__Job__c</fullName>
        <formula>TR1__Application__r.TR1__Job__r.Name</formula>
        <label>Job</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Old_Stage__c</fullName>
        <label>Old Stage</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Stage_End_Date__c</fullName>
        <label>Stage End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR1__Stage_Start_Date__c</fullName>
        <label>Stage Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR1__Stage__c</fullName>
        <label>New Stage</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Application History</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Application History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>